refactoring / debugging
fixed an issue with the GJK algorithm
moved tools functions into Collision's constructor and moved point2d functions into the point2d class
tools will be removed an all its methods will be moved out, refactored, or deprecated