@@ -9,27 +9,7 @@ public class Tools {
 
     }
 
-    public static double dotProduct(Point2d point1, Point2d point2){
 
-        return (point1.getX() * point2.getX()) + (point1.getY() * point2.getY());
-
-    }
-
-    public static Vector2d tripleProduct2d(Point2d p1, Point2d p2, Point2d p3){
-        return new Vector2d(multiplyPoint2d(p2, dotProduct(p1, p3)).translate(multiplyPoint2d(p3, -dotProduct(p1, p2))));
-    }
-
-    public static Point2d multiplyPoint2d(Point2d point, double multiplier){
-        return new Point2d(point.getX() * multiplier, point.getY() * multiplier);
-    }
-
-    public static Point2d addPoint2d(Point2d point1, Point2d point2){
-        return new Point2d(point1.getX() + point2.getX(), point1.getY() + point2.getY());
-    }
-
-    public static boolean sameDirection(Vector2d d, Point2d target){
-        return dotProduct(d, target) > 0;
-    }
 
     public static void realSleep(long millisecond){
         try {
@@ -41,7 +21,7 @@ public class Tools {
     }
 
 
-    public class CollisionDetection {
+    public static class CollisionDetection {
 
         public static boolean AABBCheck(AABB object1, AABB object2) {
 
@@ -70,29 +50,29 @@ public class Tools {
 
         public static class GJKAlgorithm {
 
-            public static final Vector2d INITIAL_VECTOR = new Vector2d(1,0);
+            public static final Point2d INITIAL_VECTOR = new Vector2d(1,0);
 
             public static Collision NarrowDetection(PolygonHitbox object1, PolygonHitbox object2) {
 
-                ArrayList<Point2d> simplexVerticies = new ArrayList<Point2d>(3);
-                Vector2d d = INITIAL_VECTOR;
+                ArrayList<Point2d> simplexVertices = new ArrayList<>(3);
+                Point2d d = INITIAL_VECTOR;
 
-                simplexVerticies.addFirst(supportFunction(object1, object2, d));
+                simplexVertices.addFirst(object1.GJKSupportFunction(d).translate(object2.GJKSupportFunction(Point2d.multiply(d, -1))));
 
-                d = new Vector2d(simplexVerticies.getFirst(), new Point2d());
+                d = new Vector2d(simplexVertices.getFirst(), new Point2d());
 
-                simplexVerticies.addFirst(supportFunction(object1, object2, d));
+                simplexVertices.addFirst(object1.GJKSupportFunction(d).translate(object2.GJKSupportFunction(Point2d.multiply(d, -1))));
 
-                Vector2d ab = new Vector2d(simplexVerticies.get(0), simplexVerticies.get(1));
-                d = new Vector2d(tripleProduct2d(ab, new Vector2d(simplexVerticies.getFirst(), new Point2d()), ab));
+                Vector2d ab = new Vector2d(simplexVertices.get(0), simplexVertices.get(1));
+                d = new Vector2d(Point2d.tripleProduct2d(ab, new Vector2d(simplexVertices.getFirst(), new Point2d()), ab));
 
                 while(true) {
 
-                    simplexVerticies.addFirst(supportFunction(object1, object2, d));
+                    simplexVertices.addFirst(object1.GJKSupportFunction(d).translate(object2.GJKSupportFunction(Point2d.multiply(d, -1))));
 
-                    if(!sameDirection(d, simplexVerticies.getFirst())){
+                    if(!sameDirection(d, simplexVertices.getFirst())){
                         return new Collision(false);
-                    } else if (checkTriangle(simplexVerticies, d)) {
+                    } else if (checkTriangle(simplexVertices, d)) {
                         return new Collision(true);
                     }
                 }
@@ -108,41 +88,21 @@ public class Tools {
             }
 
             //deprecated
-            public static boolean checkLine(ArrayList<Point2d> simplex, Vector2d d){
+            public static boolean checkLine(ArrayList<Point2d> simplex, Point2d d){
 
                 Vector2d ab = new Vector2d(simplex.get(0), simplex.get(1));
                 Vector2d ao = new Vector2d(simplex.get(0), new Point2d());
 
-                d = tripleProduct2d(ab, ao, ab);
+                d = Point2d.tripleProduct2d(ab, ao, ab);
 
                 return false;
 
             }
 
-            public static boolean checkTriangle(ArrayList<Point2d> simplex, Vector2d d){
 
-                Vector2d ab = new Vector2d(simplex.get(0), simplex.get(1));
-                Vector2d ac = new Vector2d(simplex.get(0), simplex.get(2));
-                Vector2d ao = new Vector2d(simplex.get(0), new Point2d(0,0));
 
-                if(sameDirection(tripleProduct2d(ac, ab, ac), ao)){
-
-                    simplex.remove(1);
-
-                } else if (sameDirection(tripleProduct2d(ab, ac, ab), ao)) {
-
-                    simplex.remove(2);
-
-                } else {
-
-                    return true;
-
-                }
-
-                return false;
-            }
-
-            public static Point2d supportFunction(PolygonHitbox object1, PolygonHitbox object2, Vector2d d){
+            //deprecated
+            public static Point2d supportFunction(PolygonHitbox object1, PolygonHitbox object2, Point2d d){
 
                 int obj1VertexID = 0;
                 int obj2VertexID = 0;
@@ -153,7 +113,7 @@ public class Tools {
 
                 for (int i = 0; i < object1.getVerticies().length; i++){
 
-                    dotProduct = dotProduct(object1.getVerticies()[i], d);
+                    dotProduct = Point2d.dotProduct(object1.getVerticies()[i], d);
                     if (obj1Max < dotProduct){
                         obj1Max = dotProduct;
                         obj1VertexID = i;
@@ -161,9 +121,11 @@ public class Tools {
 
                 }
 
+                d.multiply(-1);
+
                 for (int i = 1; i < object2.getVerticies().length; i++){
 
-                    dotProduct = dotProduct(object2.getVerticies()[i], d);
+                    dotProduct = Point2d.dotProduct(object2.getVerticies()[i], d);
                     if(obj2Max > dotProduct){
                         obj2Max = dotProduct;
                         obj2VertexID = i;
@@ -172,7 +134,7 @@ public class Tools {
                 }
 
                 try {
-                    return addPoint2d(object1.getVerticies()[obj1VertexID], multiplyPoint2d(object2.getVerticies()[obj2VertexID], -1));
+                    return Point2d.add(object1.getVerticies()[obj1VertexID], object2.getVerticies()[obj2VertexID]);
                 } catch (Exception e){
                     throw new InputMismatchException("one or more polygons size out of range");
                 }
